Users can now search and see comics by issue

--- a/src/constants.js.example
+++ b/src/constants.js.example
@@ -9,6 +9,10 @@ const constants =
     storageBucket: '',
     messagingSenderId: '',
   },
+  comicVineConfig,
+  {
+    apiKey: '',
+  }
 };
 
 export default constants;
